2003-11-11  Werner Koch  <wk@gnupg.org>

	* sexp.c (sexp_sscan): Implemented "%b" format specifier.

2003-11-11  Moritz Schulte  <mo@g10code.com>

	* libgcrypt.m4: Do not set prefix when calling libgcrypt-config.
	Thanks to Nikos Mavroyanopoulos.

2003-11-08  Moritz Schulte  <mo@g10code.com>

	* cipher.h (small_prime_numbers): Removed declaration.
	(PUBKEY_FLAG_NO_BLINDING): Put braces around shift.

2003-11-04  Werner Koch  <wk@gnupg.org>

	* cipher.h (_gcry_sha1_has_buffer): New.

	* gcrypt.h (gcry_create_nonce): New.

2003-10-31  Werner Koch  <wk@gnupg.org>

	* libgcrypt.vers (_gcry_generate_elg_prime): Removed this symbol;
	gnutls does not need it anymore.

	* secmem.c (mb_get_new): s/pool/block/ due to global pool.

	* misc.c (gcry_set_log_handler): s/logf/f/ to avoid shadowing
	warning against a builtin.

	* ath-pth-compat.c: cast pth_connect to get rid of the const
	prototype.

2003-10-27  Werner Koch  <wk@gnupg.org>

	* ath.h (ATH_MUTEX_INITIALIZER): Removed spurious semicolon.

2003-10-27  Moritz Schulte  <mo@g10code.com>

	* libgcrypt-config.in: Include libs/cflags of libgpg-error.

	* sexp.c (sexp_sscan): Cleaned up, deallocate scanned sexp on
	error.

	* module.c (MODULE_ID_MIN): New symbol, use it.

2003-10-27  Werner Koch  <wk@gnupg.org>

	* gcrypt.h (gcry_pk_testkey): Doc fix.

2003-09-29  Moritz Schulte  <mo@g10code.com>

	* libgcrypt-config.in: Fix --algorithms option.

2003-10-23  Werner Koch  <wk@gnupg.org>

	* gcrypt.h (gcry_err_code): Use GPG_ERR_INLINE instead of
	__inline__.

	* secmem.c (lock_pool): Don't print the warning for certain
	systems, handle ENOMEM.

2003-10-21  Werner Koch  <wk@gnupg.org>

	* secmem.c (_gcry_secmem_dump_stats): Fixed format sepcifier for a
	size_t.  Reported by Stephane Corthesy.

2003-10-10  Werner Koch  <wk@gnupg.org>

	* global.c (_gcry_malloc): Handle the no_secure_memory option.

	* gcrypt.h (gcry_prime_group_generator): New.
	(gcry_prime_release_factors): New.

2003-10-07  Werner Koch  <wk@gnupg.org>
